// Copyright 2023 lack
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// This file was autogenerated by goproto-gen. Do not edit it manually!

syntax = 'proto3';

package meta;

// Package-wide variables from generator "generated".
option go_package = "github.com/vine-io/gogogen/runtime/meta";

// +gogo:deepcopy=true
// +gogo:deepcopy:interfaces=github.com/vine-io/apimachinery/runtime.Object
// +gogo:genproto=true
// +gogo:gengorm=true
// +gogo:gengorm:external=false
// 资源元数据
message Meta {
  // 资源类型
  string kind = 1;

  // 资源版本
  string apiVersion = 2;

  // 资源名称
  string name = 3;

  // 资源的唯一ID
  // +primaryKey
  string uid = 4;

  // 资源创建的时间戳
  int64 creationTimestamp = 5;

  // 资源更新的时间戳
  int64 updateTimestamp = 6;

  // 资源删除的时间戳
  int64 deletionTimestamp = 7;

  // 资源标签
  map<string, string> tags = 8;

  // 资源注解
  map<string, string> annotations = 9;
}

// +gogo:genproto=true
// +gogo:deepcopy-gen=true
// +gogo:gengorm=true
// +gogo:gengorm:external=interfaces
// 资源元数据
message Resource {
  string spec = 1;

  map<string, string> label = 2;
}

// +gogo:deepcopy-gen=true
// +gogo:genproto=true
// +gogo:gengorm=true
// +gogo:gengorm:external=false
message Sub {
  string name = 1;

  // +primaryKey
  int32 age = 2;
}

